<resources>
    <string name="app_name">AppTrail</string>
    <string name="trail_app">Trail App</string>
    <string name="register_trail">Register Trail</string>
    <string name="manage_trail">Manage Trail</string>
    <string name="manage_trail_title">Manage Trail</string>
    <string name="configBtn">...</string>
    <string name="register_trail_title">Register Trail</string>
    <string name="start">Start</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="startbutton">Start</string>
    <string name="stopbtn">Stop</string>
    <string name="distance">Distance:</string>
    <string name="time">Time:</string>
    <string name="speed">Speed:</string>
</resources>